@@ -1,5 +1,9 @@
 2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* lib/version/misc/stubs.c: Add @implemented and @unimplemented to APIs.
+
+2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* lib/user32/misc/dde.c: Add @implemented and @unimplemented to APIs.
 	* lib/user32/misc/desktop.c: Ditto.
 	* lib/user32/misc/display.c: Ditto.
